# Voice

./: .dockerignore  .env.docker  .env.example  .env.local.template  .env.test  .gitignore  ARCHITECTURE.md  AUDITORIA_FINAL_DEFINITIVA.md  AUDIT_CHANGES.md  AUDIT_FRONTEND.md  AUDIT_INDUSTRY_STANDARDS.md  COOLIFY_DEPLOY.md  Dockerfile  FINAL_COMPLIANCE_AUDIT.md  INFORME_AUDITORIA_MODULAR.md  INFORME_FINAL_AUDITORIA_UI.md  INFORME_PRELIMINAR_PIPECAT.md  INFORME_PROFUNDO_PARA_IMPLEMENTACION.md  INFORME_REFERENCIAS_ADICIONALES.md  INVENTARIO_SISTEMA_COMPLETO.md  README.md  README_SIMULATION.md  arg_warnings.txt  asistente.db  audit-report.json  audit_script.py  auditoria_conectividad.md  b008_warnings.txt  back_audit_history_dashboard.py  back_audit_history_tab_history.html  convert_dashboard.py  dashboard_monolith.html  dashboard_monolith_utf8.html  dashboard_original_backup.html  dashboard_original_utf8.html  debug_console_script.js  debug_groq_attrs.py  deploy_helper.ps1  docker-compose.yml  emergency_fix.py  (+40 more)
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2a4b5c6d7e8f_add_rate_limiting_configuration_fields.py  7fef3e216110_merge_multiple_heads.py  8f25010dbc62_merge_concurrent_heads.py  94744f4132ab_add_tools_columns.py  a1b2c3d4e5f6_add_advanced_tab_columns.py  a1b2c3d4e5f6_add_telnyx_advanced_audio.py  a1b2c3d4e5f7_add_telnyx_system_safety.py  add_llm_controls_manual.py  add_tts_controls_v2.py  audit_transcription_defaults.py  audit_voice_defaults.py  b1c2d3e4f5g6_add_missing_conversation_and_tools_columns.py  bbbe703ac987_add_missing_voice_and_tts_configuration_.py  c1d2e3f4g5h6_remove_obsolete_columns.py  c9f05c1b0a49_initial_migration_with_all_existing_.py  ccda987b1c34_add_vad_threshold_columns.py  d1e2f3a4b5c6_add_missing_crm_webhook_and_style_columns.py  d84c2c0519f0_audit_model_defaults.py  e2f3a4b5c6d7_add_quality_fields.py  f3a4b5c6d7e8_add_telnyx_integrations.py  f4a5b6c7d8e9_add_system_tab_columns.py  ff035ed87960_add_telnyx_advanced_audio.py  merge_heads_20260201.py
app/: main.py  migrate_startup.py
app/api/: connection_manager.py  routes.py  routes_v2.py
app/core/: adapter_registry.py  audio_manager.py  audio_numpy.py  audio_processor.py  audio_streamer.py  audio_utils.py  auth_simple.py  config.py  config_utils.py  control_channel.py  decorators.py  di_container.py  dialer.py  exceptions.py  frames.py  http_client.py  input_sanitization.py  logging_config.py  orchestrator.py  orchestrator_backup.py  orchestrator_v2.py  pipeline.py  pipeline_factory.py  processor.py  prompt_builder.py  redis_state.py  security_middleware.py  service_factory.py  vad_filter.py  voice_ports.py  webhook_security.py
app/db/: database.py  models.py
app/domain/: config_logic.py
app/infrastructure/: __init__.py  di_container.py  provider_registry.py
app/observability/: __init__.py  metrics.py
app/ports/: transport.py
app/providers/: azure.py  azure_openai.py  groq.py
app/routers/: config.py  config_router.py  dashboard.py  history_router.py  system.py  voice.py
app/schemas/: browser_schemas.py  config_schemas.py  input_validation.py  profile_config.py  telnyx_schemas.py  twilio_schemas.py
app/services/: azure_speech.py  base.py  baserow.py  cache.py  db_service.py  llm.py  telephony.py  webhook.py
app/templates/: call_details.html  dashboard.html
app/use_cases/: __init__.py
app/utils/: config_utils.py  ssml_builder.py
audit/: columns_classified.json  inventory_353_columns.csv  obsolete_columns_classified.json  schema_to_model_mapping.json
back_audit_advanced_app/: main.py
back_audit_advanced_app/api/: connection_manager.py
back_audit_advanced_app/core/: event_handlers.py  orchestrator.py  service_factory.py
back_audit_advanced_app/routers/: dashboard.py
back_audit_advanced_templates/: dashboard.html
back_audit_campaigns_app/api/: routes.py
back_audit_campaigns_app/core/: metrics.py
back_audit_campaigns_app/services/: azure_speech.py
back_audit_campaigns_templates/partials/: panel_simulator.html
back_audit_connectivity_app/: migrate_startup.py
back_audit_connectivity_app/core/: config_utils.py  csrf.py  logging_config.py  prompt_builder.py
docs/: AUDIT_DATABASE_2026-01-31.md  AUDIT_DATABASE_CERTIFICATION_2026-01-31.md  AUDIT_DATABASE_FINAL_2026-01-31.md  AUDIT_SIMULATOR_2026-01-31.md  AUDIT_TELNYX_2026-01-31.md  AUTHENTICATION.md  CONTAINER_MANIFEST.md  DATABASE_INTERNAL_FIELDS.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  MIGRATIONS.md  OBSOLETE_COLUMNS_REVIEW_2026-01-31.md  PASSWORD_SECURITY.md  SECRETS_MANAGEMENT.md  STATUS_REPORT_2026-01-31.md  SYSTEM_INVENTORY.md  TESTING.md  coolify_deployment.md  monitoring.md
nginx/: nginx.conf
scripts/: add_baserow_columns.py  add_rate_limiting_columns.py  add_rate_limiting_columns.sql  add_vad_columns.py  add_webhook_columns.py  apply_missing_columns.py  apply_missing_columns_async.py  audit_database.py  check_frames_fix.py  check_groq.py  check_telnyx_config.py  classify_obsolete_columns.py  db_audit_phase1_inventory.py  db_audit_phase2_schema_mapping.py  db_audit_phase3_classify.py  debug_groq_attrs.py  deploy.sh  download_model.py  init_sqlite_db.py  lint.sh  migrate_llm_controls_sqlite.py  migrate_phone_config.py  migrate_telnyx.py  migrate_tts_controls_sqlite.py  patch_db.py  patch_threshold.py  repro_500.py  review_obsolete_columns.py  simulate_analysis_controls.py  simulate_flow_controls.py  simulate_full_features.py  simulate_llm_controls.py  simulate_stt_controls.py  simulate_system_controls.py  simulate_telephony_controls.py  simulate_tool_controls.py  simulate_user_journey.py  startup.sh  test-docker.sh  test_traceability.py  (+12 more)
tests/: conftest.py  simulate_stream.py  test_profile_config.py  test_semantic_vad.py
(+212 files in other folders)
